...
                navigationIcon = {
                    IconButton(onClick = {
                        backIcon()
                    }) {
                        Icon(
                            imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                            contentDescription = "BackFromProfile"
                        )
                    }
                }
            )
        }
    ) { innerPadding ->
...
            value = nickname,
            onValueChange = { nickname= it },
            label = { Text("Никнейм") },
            modifier = Modifier
                .fillMaxWidth()
                .padding(8.dp)
                .testTag("NicknameCreateTextField")
        )
        OutlinedTextField(
            value = fullName,
            onValueChange = { fullName = it },
            label = { Text("Полное имя") },
            modifier = Modifier
                .fillMaxWidth()
                .padding(8.dp)
                .testTag("FullNameCreateTextField")
        )
        OutlinedTextField(
            value = password,
            onValueChange = { password = it },
            label = { Text("Пароль") },
            visualTransformation = PasswordVisualTransformation(),
            modifier = Modifier
                .fillMaxWidth()
                .padding(8.dp)
                .testTag("PasswordCreateTextField")
        )
        Button(
            onClick = { onSubmit(ProfileData(img = image,nickName = nickname,fullName = fullName,password = password))},
            modifier = Modifier
                .fillMaxWidth()
                .padding(16.dp)
                .testTag("CreateProfileButton")
        ) {
            Text(text = stringResource(R.string.CreateProfile))
        }
    }
}

...
                modifier = Modifier.padding(bottom = 8.dp)
            )
        }
        OutlinedTextField(
            value = nickname,
            onValueChange = { nickname = it },
            label = { Text("Nickname") },
            modifier = Modifier
                .fillMaxWidth()
                .padding(8.dp)
                .testTag("NicknameLoginTextField")
        )
        OutlinedTextField(
            value = password,
            onValueChange = { password = it },
            label = { Text("Пароль") },
            visualTransformation = PasswordVisualTransformation(),
            modifier = Modifier
                .fillMaxWidth()
                .padding(8.dp)
                .testTag("PasswordLoginTextField")
        )
        Button(
            onClick = { onSubmit(nickname, password) },
            modifier = Modifier
                .fillMaxWidth()
                .padding(16.dp)
                .testTag("LoginProfileButton")
        ) {
            Text(text = stringResource(R.string.LoginProfile))
        }
    }
}
@Composable
private fun AuthenticatedProfileView(data: ProfileData,logoutUser:()->Unit) {
    Card(
        shape = CircleShape,
        modifier = Modifier
            .size(150.dp)
            .padding(16.dp)
    ) {
        AsyncImage(
            model = data.img,
            contentDescription = "Avatar",
            contentScale = ContentScale.Crop,
            modifier = Modifier.fillMaxSize()
        )
    }
    Text(
        text = data.nickName,
...
    Text(
        text = data.fullName,
        style = MaterialTheme.typography.titleMedium,
        color = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.7f),
        modifier = Modifier
            .padding(bottom = 24.dp)
            .testTag("FullName")
    )
    HorizontalDivider(
        modifier = Modifier
            .fillMaxWidth()
            .padding(horizontal = 32.dp),
        thickness = 1.dp,
        color = MaterialTheme.colorScheme.outline.copy(alpha = 0.2f)
    )
    Button(onClick = logoutUser,
        modifier = Modifier
            .fillMaxWidth()
            .padding(horizontal = 32.dp, vertical = 8.dp)
            .testTag("LogoutButton")
    ) {
        Text(text = stringResource(R.string.Logout))
    }
}
@Composable
private fun UnauthenticatedProfileView(
...
        modifier = Modifier.padding(16.dp)
    ) {
        Text(
            text = stringResource(R.string.NotAuthenticated),
            style = MaterialTheme.typography.titleLarge,
            modifier = Modifier.padding(bottom = 24.dp)
                .testTag("TextUnauthenticated")
        )
        Button(
            onClick = onLoginClick,
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 32.dp, vertical = 8.dp)
                .testTag("Login")
        ) {
            Text(text = stringResource(R.string.LoginProfile))
        }
        Button(
            onClick = onCreateClick,
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 32.dp, vertical = 8.dp)
                .testTag("Create")
        ) {
            Text(text = stringResource(R.string.CreateProfile))
        }
    }
}
