...
                                }
                            },
                            enabled = backButtonEnabled
                        ) {
                            Icon(
                                Icons.AutoMirrored.Default.ArrowBack,
                                contentDescription = "BackButtonDetailSavedScreen"
                            )
                        }
                    },
                    colors = TopAppBarDefaults.topAppBarColors(
                        containerColor = when (theme) {
                            AppTheme.DARK -> Color.Black
...
                    .padding(padding)
                    .fillMaxSize()
            ) {
                item {
                    AsyncImage(
                        model = certainBook?.image?.replace("http://", "https://"),
                        contentDescription = "PictureDetailSavedScreen",
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(500.dp),
                        contentScale = ContentScale.Crop
                    )

...
                                color = when (theme) {
                                    AppTheme.DARK -> Color.LightGray
                                    AppTheme.LIGHT -> Color.DarkGray
                                },
                                modifier = Modifier
                                    .padding(bottom = 8.dp)
                                    .testTag("DetailSavedScreenTitle")
                            )
                        }
                        certainBook?.description?.let {
                            Text(
                                text = it,
                                style = MaterialTheme.typography.bodyLarge,
                                color = when (theme) {
                                    AppTheme.DARK -> Color.LightGray
                                    AppTheme.LIGHT -> Color.DarkGray
                                },
                                modifier = Modifier.testTag("DetailSavedScreenDescription")
                            )
                        }
                        Row(verticalAlignment = Alignment.CenterVertically) {
                            Text(
                                text = stringResource(R.string.Rating),
                                style = MaterialTheme.typography.titleSmall.copy(fontWeight = FontWeight.Bold),
...
                                    text = it.toString(),
                                    style = MaterialTheme.typography.bodyLarge,
                                    color = when (theme) {
                                        AppTheme.DARK -> Color.LightGray
                                        AppTheme.LIGHT -> Color.DarkGray
                                    },
                                    modifier = Modifier.testTag("DetailSavedScreenRating")
                                )
                            }
                        }
                        Row(verticalAlignment = Alignment.CenterVertically) {
                            Text(
                                text = stringResource(R.string.PublishedAt),
...
                                    text = it,
                                    style = MaterialTheme.typography.bodyLarge.copy(fontWeight = FontWeight.Bold),
                                    color = when (theme) {
                                        AppTheme.DARK -> Color.LightGray
                                        AppTheme.LIGHT -> Color.DarkGray
                                    },
                                    modifier = Modifier.testTag("DetailSavedScreenPublishedAt")
                                )
                            }
                        }
                    }
                }
            }
...
