...
    changeTheme: () -> Unit,
    theme: AppTheme,
    changeLanguage: () -> Unit
) {
    CenterAlignedTopAppBar(
        title = { Text(text = stringResource(R.string.MainScreen),
            modifier = Modifier.testTag("Books")) },
        colors = TopAppBarDefaults.topAppBarColors(
            containerColor = when (theme) {
                AppTheme.DARK -> Color.Black
                AppTheme.LIGHT -> Color.LightGray
            },
            titleContentColor = when (theme) {
...
        modifier = Modifier.semantics {
            backgroundColor = when (theme) {
                AppTheme.DARK -> Color.Black
                AppTheme.LIGHT -> Color.LightGray
            }
        }
            .testTag("TopBar"),
        navigationIcon = {
            IconButton(onClick = onSearchClicked) {
                Icon(Icons.Default.Search, contentDescription = "SearchIcon")
            }
        },
        actions = {
            IconButton(onClick = navigateToProfilePage) {
                Icon(Icons.Default.AccountCircle, contentDescription = "ProfileIcon")
            }
            TopAppBarMenu(changeTheme,changeLanguage)
        }
    )
}
